added text vectorizer

--- a/Tensorflow_Model.ipynb
+++ b/Tensorflow_Model.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,12 +26,13 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "import matplotlib.pyplot as plt \n",
-    "import tensorflow as tf"
+    "import tensorflow as tf\n",
+    "from tensorflow import keras"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -141,7 +142,7 @@
        "4             0        0       0       0              0  "
       ]
      },
-     "execution_count": 5,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -161,38 +162,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
-    "from tensorflow.keras.layers import TextVectorization"
+    "X = data['comment_text']\n",
+    "y = data.iloc[:,2:].values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding a text vectorizer layer"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "MAX_FEATURES = 200000 # Number of words in the vocabulary"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer = keras.layers.TextVectorization(\n",
+    "    max_tokens=MAX_FEATURES, output_sequence_length=1800, output_mode=\"int\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorizer.adapt(X.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
-       "       ...,\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0],\n",
-       "       [0, 0, 0, 0, 0, 0]], dtype=int64)"
+       "['', '[UNK]', 'the', 'to', 'of', 'and', 'a', 'you', 'i', 'is']"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "X = data['comment_text']\n",
-    "y = data.iloc[:,2:].values"
+    "# Look at the first 10 words in the vocabulary\n",
+    "vectorizer.get_vocabulary()[:10]"
    ]
   }
  ],
