--- a/Tensorflow_Model.ipynb
+++ b/Tensorflow_Model.ipynb
@@ -226,6 +226,100 @@
     "# Look at the first 10 words in the vocabulary\n",
     "vectorizer.get_vocabulary()[:10]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(1800,), dtype=int64, numpy=array([288, 263,   0, ...,   0,   0,   0], dtype=int64)>"
+      ]
+     },
+     "execution_count": 27,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorizer('Hello world!')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "vectorized_text = vectorizer(X.values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<tf.Tensor: shape=(159571, 1800), dtype=int64, numpy=\n",
+       "array([[  645,    76,     2, ...,     0,     0,     0],\n",
+       "       [    1,    54,  2489, ...,     0,     0,     0],\n",
+       "       [  425,   441,    70, ...,     0,     0,     0],\n",
+       "       ...,\n",
+       "       [32445,  7392,   383, ...,     0,     0,     0],\n",
+       "       [    5,    12,   534, ...,     0,     0,     0],\n",
+       "       [    5,     8,   130, ...,     0,     0,     0]], dtype=int64)>"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "vectorized_text"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Create dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# MCSHBAP\n",
+    "dataset = tf.data.Dataset.from_tensor_slices((vectorized_text, y))\n",
+    "dataset = dataset.cache().shuffle(160000).batch(16).prefetch(8)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 1800), dtype=tf.int64, name=None), TensorSpec(shape=(None, 6), dtype=tf.int64, name=None))>"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dataset"
+   ]
   }
  ],
  "metadata": {
