--- a/Tensorflow_Model.ipynb
+++ b/Tensorflow_Model.ipynb
@@ -303,22 +303,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "<_PrefetchDataset element_spec=(TensorSpec(shape=(None, 1800), dtype=tf.int64, name=None), TensorSpec(shape=(None, 6), dtype=tf.int64, name=None))>"
+       "((16, 1800), (16, 6))"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "dataset"
+    "batch_x, batch_y = dataset.as_numpy_iterator().next()\n",
+    "\n",
+    "batch_x.shape, batch_y.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train = dataset.take(int(len(dataset) * 0.7))\n",
+    "val = dataset.skip(int(len(dataset) * 0.7)).take(int(len(dataset) * 0.2))\n",
+    "test = dataset.skip(int(len(dataset) * 0.9)).take(int(len(dataset) * 0.1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(6981, 1994, 997)"
+      ]
+     },
+     "execution_count": 63,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(train), len(val), len(test)"
    ]
   }
  ],
